# IG-mini-PT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  salida.hdr
Practica 1/: coordinate.cpp  coordinate.hpp  geometry.cpp  geometry.hpp  main.cpp  transform.cpp  transform.hpp
Practica1/: planet.cpp  planet.hpp  practica1.cpp  stations1.txt
images/: salida.hdr
lib/: AABB.cpp  AABB.hpp  BRDF.cpp  BRDF.hpp  BVH.cpp  BVH.hpp  BoundedQueue.hpp  CMakeLists.txt  ConcurrentBoundedQueue.hpp  Logger.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  error.cpp  error.hpp  event.cpp  event.hpp  file.cpp  file.hpp  geometry.cpp  geometry.hpp  image.cpp  image.hpp  integrator.cpp  integrator.hpp  light_source.cpp  light_source.hpp  parallelization.cpp  parallelization.hpp  pixel.hpp  random.cpp  random.hpp  sample_scenes.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  surface_interaction.cpp  surface_interaction.hpp  (+4 more)
models/: airplane.ply  bun_zipper.ply  bun_zipper_res3.ply  bun_zipper_res3_smooth.ply  bun_zipper_res4.ply  bun_zipper_res4_smooth.ply  bun_zipper_smooth.ply  dragon_vrip_res3.ply  teapot.ply  teapot_smooth-girada.ply  teapot_smooth.ply
path_tracer/: main.cpp  sample_scenes.hpp
photon_mapper/: .gitignore
photon_mapper/SmallPM/src/: PhotonMapping.cpp  Random.cpp
practica1/: example1.txt  example2.txt  main.cpp  planet.cpp  planet.hpp  practica1.cpp  stations1.txt
ray_tracer/: main.cpp
test/: color_test.cpp  geometry_test.cpp  main.cpp  test_factorial.cpp  test_hello.cpp
textures/: ada.ppm  fire.ppm  grito_simpson.ppm  programer.ppm  ray_tracer.ppm  sudor.ppm
tone_mapper/: main.cpp
